styles.css
@import url('https://fonts.googleapis.com/css2?family=Modern+Antiqua&family=Playfair+Display:wght@500&display=swap');
body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
    background-color: #f5f5f5;
    display: flex;
    justify-content: center;
    align-items: center;
    height:100vh;
  }

.card-body {
    display: flex;
    background-color: #ffffffd4;
    border-radius: 8px;
    width: 650px;
    height: 350px;
}

.image img {
    width: 300px;
    height:350px;
    border-radius: 4px 0px 0px 4px;
}

.details {
    padding: 20px;
   }

.pname {
    font-size: 12px;
    color: #777777;
    letter-spacing: 0.8cap;
}

.p-title {
    font-size: 24px;
    margin: 10px 0;
    color: #333333;
     .playfair-display-font;  
      font-family: "Playfair Display", serif;
      font-optical-sizing: auto;
      font-weight: medium 500;
      font-style: normal;
      font-size:xx-large;

    };


.content {
    font-size:smaller;
    color: #555555;
    
  }

.product-price {
    display: flex;
    margin-bottom: 20px;
}

.current-price {
    font-size: 24px;
    color: #28a745;
    font-weight: 900;
    font-family: "Playfair Display", serif;
}

.original-price {
    font-size: 14px;
    color: #aaaaaa;
    text-decoration: line-through;
    margin-left: 10px;
    font-weight: 600;
  
}

.button {
    background-color: #28a745;
    color: #ffffff;
    border: none;
    padding: 10px 20px;
    border-radius: 4px;
    font-size: 16px;
    width: 300px;
   word-spacing: 0.2cap;
}

a{
    color: white;
}

a:hover {
    color: blue;
}

.button:hover {
    background-color: #218838;
}

